# thesis_examples

chapter3/: CMakeLists.txt  README.md
chapter3/section1/: CMakeLists.txt  plain_action.cpp  plain_action_two_macros.cpp
chapter3/section2/: CMakeLists.txt  async_with_synchronization.cpp  async_without_synchronization.cpp  async_without_synchronization_with_continuation_I.cpp  async_without_synchronization_with_continuation_II.cpp  async_without_synchronization_with_continuation_III.cpp  sync.cpp
chapter3/section3/: CMakeLists.txt
chapter3/section3/hpx_queue/: CMakeLists.txt  myqueue.cpp  myqueue.hpp  myqueue_client.hpp  program_hpx_queue.cpp  queue.cpp  queue.hpp  queue_client.hpp
chapter3/section3/hpx_queue_template/: CMakeLists.txt  myqueue.hpp  myqueue_client.hpp  program_hpx_queue_template.cpp  queue.hpp  queue_client.hpp
chapter3/section3/hpx_queue_template_migrable/: CMakeLists.txt  myqueue.cpp  myqueue.hpp  myqueue_client.hpp  program_hpx_queue_template_migrable.cpp  queue.hpp  queue_client.hpp
chapter3/section3/hpx_queue_template_migrable_derived/: CMakeLists.txt  container.cpp  container.hpp  myqueue.hpp  myqueue_client.hpp  program_hpx_queue_template_migrable_derived.cpp  queue.hpp  queue_client.hpp
chapter3/section4/: CMakeLists.txt  distributed_channel.cpp  local_channel.cpp  local_channel_two_threads.cpp
chapter3/section5/: CMakeLists.txt  object_serialization.cpp
chapter3/section6/: CMakeLists.txt  start_runtime_explicit.cpp  start_runtime_explicit_async.cpp  start_runtime_implicit.cpp  start_runtime_suspend_resume.cpp
